changes http API (reflected in openapi specification)
